# SkyEmu

./: .clang-format  .gitignore  Acknowledgments.md  CMakeLists.txt  CNAME  LICENSE  README.md  SkyBoy.js  SkyBoy.wasm  SkyEmu.js  SkyEmu.wasm  authorized.html  changes.patch  cstool.html  cstool.js  cstool.wasm  default.nix  flake.nix  format-check.sh  format.sh  fuzz_disasm.html  fuzz_disasm.js  fuzz_disasm.wasm  index.html  site.webmanifest  skyemu_libretro.info  sw.js  test_arm.html  test_arm.js  test_arm.wasm  test_arm64.html  test_arm64.js  test_arm64.wasm  test_arm_regression.html  test_arm_regression.js  test_arm_regression.wasm  test_basic.html  test_basic.js  test_basic.wasm  test_customized_mnem.html  (+41 more)
.github/workflows/: codeql-analysis.yml  deploy_android.yml  deploy_android_kotlin.yml  deploy_arm64_linux.yml  deploy_freebsd.yml  deploy_ios.yml  deploy_linux.yml  deploy_mac.yml  deploy_retro_android.yml  deploy_retro_ios.yml  deploy_retro_linux.yml  deploy_retro_mac.yml  deploy_retro_win.yml  deploy_web.yml  deploy_win.yml
branch/dev/: SkyEmu.js  SkyEmu.wasm  index.html  sw.js
cmake/: RPi.cmake  get_soc_version.sh
commit/003ec637155f69f0264e7d7ef562f0d1059b67f6/: SkyEmu.js  SkyEmu.wasm  sw.js
commit/00d6ff8fae049c1146489fad078407075ed627de/: SkyEmu.js  SkyEmu.wasm  sw.js
commit/00ea07465d4e7747f1e55734e26301d12ad8dc9a/: SkyEmu.wasm
commit/0148d36886f478f10e701a7216c608a2babb9b37/: SkyEmu.wasm
commit/0175724463f5eccf1de8c7e47c4b38dd8c637931/: SkyEmu.wasm
commit/024208a6fb2f5af1312d3963fe7638b4efdd0485/: sw.js
commit/0245d8265260ea55a52633b43e7123518f35b50c/: SkyEmu.wasm
commit/028aa98e66a8f042415f72f4ce0213da019c2158/: SkyEmu.wasm  sw.js
commit/02deb055923ad3b651ceb283bb4c3793fbd78d90/: SkyEmu.wasm  sw.js
commit/030efcef683ea0a5bb4524cd7e2d47e881e21823/: SkyEmu.wasm
commit/039de0a7422b91b077ee2d92a43d5ba7d5d8cd7c/: SkyEmu.wasm
commit/03c8f3167ff80a44a777e9fa734f7c62fe672f06/: SkyEmu.wasm
commit/04399bd9f91dce339d56d64db3382861d6575fc2/: SkyEmu.js  SkyEmu.wasm
commit/046b2bbfb8ce76a79e62da739902933e854ec88f/: SkyEmu.wasm  sw.js
commit/0560a8a4fe951a4f5a4a649d5c5d111cf3ce2e7b/: SkyEmu.wasm
commit/05aaa4fa4cedc17e5f12e795d0a4c8b00ee3f68a/: SkyEmu.wasm
commit/05bcdc857eb3a369f8e8adaf7f88fff5dcfb6551/: SkyEmu.wasm  sw.js
commit/05e077f43e6bef080a119d17c0e4cfdbf43a2479/: SkyEmu.wasm  sw.js
commit/061a8c1487e19c2bf614f32a4ddd3810f4292d45/: SkyEmu.wasm
commit/065dee9d3841a07bb4293eb7ff8bc0ba6b798589/: SkyEmu.wasm  sw.js
commit/0667dbc7a2503fcb8741db8305fc4c4af3a76e1f/: SkyEmu.wasm  sw.js
commit/06876c07c727eea27f2a7ea037bbf0b86f0d6747/: SkyEmu.wasm  sw.js
commit/06aae8b523bc10adace8823b58216b67c7ea48a7/: SkyEmu.wasm
commit/06ca0c8fb9aa697095eee4ec6c66e7a8ce42cca6/: SkyEmu.wasm
commit/06d316acd2aaa05eb85427591429ae855e68d7ee/: SkyEmu.wasm
commit/06efdea02743b0140ddf13f44408a7d7ff36e2c0/: SkyEmu.wasm
commit/0702f0638632805bc4662410e0e22204d981bdd8/: SkyEmu.js  SkyEmu.wasm  sw.js
commit/0714d4a0231fd603d6a7cd5bbad556eeb52ed149/: SkyEmu.wasm
commit/075919e233ac561427438e102c816e8bf32bec7e/: sw.js
commit/076347bdf4fe771b00c4fbb85cc9c4bf8574fdf0/: SkyEmu.wasm  sw.js
commit/07a592cbf01f1a1431bdd6ccc394cab9e8f71a14/: SkyEmu.wasm  sw.js
commit/083a2ef343dfb6da325c19127f5293ad097d8589/: sw.js
commit/08fc31e8c530eb488f87a5d15d333f0edf40632e/: SkyEmu.wasm
commit/09013b1d2c6b94740efb4ca465d80d57ef967f8c/: SkyEmu.wasm
commit/091c6f3efa69f6cdd0b33671fbbe7688871bdaf9/: SkyEmu.js  SkyEmu.wasm  sw.js
commit/09b308701d611536c0adf9e888dcc8ffce570a51/: SkyEmu.wasm  sw.js
commit/09bedba3d532fcd8bcb0ecf3b435a5f888dff631/: SkyEmu.wasm
commit/0a2e8c970b0c89e62a0590232c8ef97c217cd48b/: SkyEmu.wasm
commit/0a320deb37b45ade0c07f999003d590daa085b89/: SkyEmu.wasm  sw.js
commit/0a32d27af509a324bc57d323302c953209717089/: SkyEmu.wasm  sw.js
commit/0a7230528c3f371d416c174f3c62bd222b1d51c2/: SkyEmu.wasm  sw.js
commit/0abc05931c3f0145cdfc162c4c1a347c7a114859/: SkyEmu.wasm
commit/0accc32ac51972bdffd4c9485a3ab967e4b0570a/: SkyEmu.wasm  sw.js
commit/0afa4e1b4a178255a18dfc74160dc5735b6e1b17/: SkyEmu.wasm  sw.js
commit/0b408b9895c4dcb1b5e78dfa5d924b0a0bd04115/: SkyEmu.js  SkyEmu.wasm  sw.js
commit/0b4264fd3818dca5d9de8b80f0092cb4927b0001/: SkyEmu.wasm  sw.js
commit/0c01dc938a03cfcb3bb451d416ee1fd330d51fe7/: SkyEmu.wasm
commit/0c13f0a1a5c3ec9ae464f8d03a34965a6ea48a37/: SkyEmu.wasm
commit/0c3efd80716f7140b3405d92d9782f540f3c3547/: SkyEmu.wasm  sw.js
commit/0cf56bb8d96f7975a98193e323be87781b1a507d/: SkyEmu.wasm  browserconfig.xml
docs/: Accuracy.md  HTTP_CONTROL_SERVER.md  LibraryModifications.md  SameBoy Audio:Video Sync.txt  SkyBoy.html  SkyBoy.js  SkyBoy.wasm  SkyEmu-Bootrom.pxd  SkyEmu-Color Correction.pxd  Theme control strips.md  arm.inc  gbops - The Game Boy opcode table.html  skyemu-theme-default.pxd  skyemu-theme-mini.pxd  skyemu-theme-template.pxd  thumb16.inc  useful-links-gb.txt
src/: IconsForkAwesome.h  arm7.h  arm7tdmi_instr.h  atlas.cpp  atlas.h  cacert_pem.h  cimgui_sdl_ogl3_backend.cpp  cimgui_sdl_ogl3_backend.h  cloud.cpp  cloud.h  common_defs.h  default_theme.h  forkawesome.h  gb.h  gba.h  gba_bios.h  gba_tables.h  gui_textbox_extended.h  http_control_server.cpp  http_control_server.h  httplib.h  https.cpp  https.hpp  ios_support.h  ios_support.m  karla.h  lcd_shaders.h  lcd_shaders.shd  libretro.c  libretro_common.h  libretro_gb.c  libretro_gba.c  libretro_nds.c  load_rom_png.h  localization.c  localization.h  main.c  mutex.cpp  mutex.h  nds.h  (+23 more)
src/openssl/: CMakeLists.txt  c_rehash.cmake  openssl.pc.in.cmake  opensslconf.h.cmake
src/openssl/apps/: CA.pl.cmake  CMakeLists.txt  tsget.cmake
src/openssl/cmake/: cmake_uninstall.cmake.in
src/openssl/crypto/: CMakeLists.txt  bn_conf.h.cmake  dso_conf.h.cmake
src/openssl/ssl/: CMakeLists.txt
tools/: build_android.sh  gen_gba_tables.py  gen_playstore.py  parse_gbops.py  screenshot.py  tas-example.py
v0/: index.html
v1/: note.txt
v2/: SkyEmu.js  SkyEmu.wasm
v4/: filler.txt  sw.js
v5/: index.html
(+1610 files in other folders)
